# pure-capability

./: default.nix  pure-capability.cabal
src/Pure/: Capability.hs
src/Pure/Capability/: Aspect.hs  Class.hs  Context.hs  FFunctor.hs  TH.hs  Trans.hs
src/Pure/Capability/Context/: Trans.hs
