name:                pure-capability
version:             0.7.0.0
synopsis:            A derivation approach for record-of-function–style extensible capabilities.
homepage:            github.com/grumply/pure-capability
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Pure.Capability
      Pure.Capability.Aspect
      Pure.Capability.Context
      Pure.Capability.Context.Trans
      Pure.Capability.FFunctor
      Pure.Capability.TH

  build-depends:
      base >=4.8,
      pure-state,
      template-haskell,
      transformers,
      mtl

  hs-source-dirs:      src
  default-language:    Haskell2010

