name:                pure-capability
version:             0.8.0.0
synopsis:            A derivation approach for record-of-function–style extensible capabilities.
homepage:            purehs.org/doc/pure-capability
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-capability.git

library
  exposed-modules:
      Pure.Capability
      Pure.Capability.Aspect
      Pure.Capability.Context
      Pure.Capability.Context.Trans
      Pure.Capability.FFunctor
      Pure.Capability.TH

  build-depends:
      base >=4.8,
      pure-core,
      pure-state,
      template-haskell,
      exceptions,
      transformers,
      mtl

  hs-source-dirs:      src
  default-language:    Haskell2010

